--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,3 +1,4 @@
 SERVER_STARTING_PORT= #Your Port for starting the server, example 3000, 4000 ..
 MONGO_DB_CONNECTION_STRING= #Your MongoDB connection string. For this go to "mongodb.com" and create a cluster to get the connection string
 JWT_SECRET_KEY_GENERATOR= #Your JWT secret key, you can generate one from "jwt secret key generator" website
+OPEN_AI_API_KEY= # Generate an OpenAi key fromt ChatGpt Website
